--- a/styles/ui.css
+++ b/styles/ui.css
@@ -15,6 +15,7 @@
     height: 30px;
     margin-bottom: 5px;
     color: #999999;
+    overflow-wrap: break-word;
 }
 
 .tag-selected, .name-selected, .date-selected {
@@ -30,7 +31,7 @@ input {
     font-size: large;
     border: 1px solid #555555;
     padding: 0px;
-    height: 30px;
+    height: 40px;
     margin-bottom: 5px;
 }
 
@@ -40,6 +41,6 @@ button {
     background-color: black;
     color: white;
     padding: 0px;
-    height: 32px;
+    height: 30px;
     margin-bottom: 5px;
 }
