--- a/styles/ui.css
+++ b/styles/ui.css
@@ -9,13 +9,18 @@
     vertical-align: top;
 }
 
+.button {
+    width: 23%;
+    display: inline-block;
+    vertical-align: top;
+}
+
 .tag, .name, .date, .tag-selected, .name-selected, .date-selected {
     border: 1px solid #555555;
     width: 100%;
-    height: 40px;
     margin-bottom: 5px;
+    padding: 2px 0px 2px 0px;
     color: #999999;
-    overflow-wrap: break-word;
 }
 
 .tag-selected, .name-selected, .date-selected {
@@ -41,6 +46,6 @@ button {
     background-color: black;
     color: white;
     padding: 0px;
-    height: 30px;
+    height: 32px;
     margin-bottom: 5px;
 }
