--- a/styles/ui.css
+++ b/styles/ui.css
@@ -29,7 +29,7 @@
 
 .filter {
     border: 1px solid #555555;
-    color: #999999;
+    color: white;
     display: inline-block;
     margin: 0px 5px 5px 0px;
 }
