--- a/styles/ui.css
+++ b/styles/ui.css
@@ -4,17 +4,17 @@
 
 .button-container, .tag-container {
     width: 100%;
-    display: inline;
 }
 
 .tag-container {
     margin-bottom: 5px;
-    height: 500px;
-    overflow-y: hidden;
+    height: 300px;
+    overflow-y: auto;
 }
 
 .button-container {
-    overflow-x: hidden;
+    overflow-x: auto;
+    white-space: nowrap;
 }
 
 .tags, .names, .dates {
