--- a/styles/ui.css
+++ b/styles/ui.css
@@ -1,3 +1,7 @@
+::-webkit-scrollbar { 
+    display: none; 
+}
+
 #dvUi {
     display: none;
 }
@@ -7,8 +11,8 @@
 }
 
 .tag-container {
-    margin-bottom: 5px;
-    height: 300px;
+    margin-bottom: 10px;
+    height: 310px;
     overflow-y: auto;
 }
 
