--- a/log-v2/styles/ui.css
+++ b/log-v2/styles/ui.css
@@ -50,7 +50,7 @@
     width: 20%;
     align-content: center;
     text-align: center;
-    border-left: 1px solid #555555;
+    border-left: 1px solid #999999;
 }
 
 .tag-selected, .name-selected, .date-selected {
@@ -69,6 +69,7 @@
     color: white;
     display: inline-block;
     padding: 0px 10px 0px 10px;
+    max-width: 90%;
 }
 
 #dvNumbers {
@@ -92,6 +93,26 @@
 
 .hidden {
     display: none;
+}
+
+.dvLetters {
+    border: 1px solid #555555;
+    padding: 5px;
+    margin-top: 10px;
+    color: #999999;
+    display: none;
+}
+
+.dvLetterRow {
+    width: 100%;
+    text-align: center;
+}
+
+.dvLetter {
+    display: inline-block;
+    padding: 10px 15px 10px 15px;
+    margin: 5px 0px 5px 0px;
+    border: 1px solid #000000;
 }
 
 input {
