--- a/log-v2/styles/ui.css
+++ b/log-v2/styles/ui.css
@@ -110,7 +110,7 @@
 
 .dvLetter {
     display: inline-block;
-    padding: 10px 15px 10px 15px;
+    padding: 10px;
     margin: 5px 0px 5px 0px;
     border: 1px solid #000000;
 }
