--- a/log-v2/styles/ui.css
+++ b/log-v2/styles/ui.css
@@ -69,7 +69,7 @@
     color: white;
     display: inline-block;
     padding: 0px 10px 0px 10px;
-    max-width: 90%;
+    max-width: 93%;
 }
 
 #dvNumbers {
@@ -112,6 +112,10 @@
     display: inline-block;
     padding: 10px;
     border: 1px solid #000000;
+}
+
+.dvText {
+    margin-bottom: 5px;
 }
 
 input {
