--- a/log-v2/styles/ui.css
+++ b/log-v2/styles/ui.css
@@ -101,6 +101,10 @@
     margin-top: 10px;
     color: #999999;
     display: none;
+    position: absolute;
+    bottom: 5px;
+    background-color: #000000;
+    width: 92%;
 }
 
 .dvLetterRow {
@@ -111,6 +115,7 @@
 .dvLetter {
     display: inline-block;
     padding: 10px;
+    margin: 2px 0px 2px 0px;
     border: 1px solid #000000;
 }
 
